--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,19 +19,29 @@ services:
       - redis_data:/data
     restart: unless-stopped
 
-  app:
-    build: .
+  backend:
+    build: ./backend
     ports:
       - "8080:8080"
     environment:
-      - DATABASE_URL=postgres://myuser:mypassword@postgres:5432/mydb?sslmode=disable
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - REDIS_PASSWORD=
-      - JWT_SECRET=${JWT_SECRET:?Set JWT_SECRET in .env file}
+      - DATABASE_URL=${DATABASE_URL}
+      - REDIS_HOST=${REDIS_HOST:-redis}
+      - REDIS_PORT=${REDIS_PORT:-6379}
+      - REDIS_PASSWORD=${REDIS_PASSWORD:-}
+      - JWT_SECRET=${JWT_SECRET}
     depends_on:
       - postgres
       - redis
+    restart: unless-stopped
+
+  frontend:
+    build: ./frontend
+    ports:
+      - "5173:5173"
+    environment:
+      - PUBLIC_API_URL=http://localhost:8080
+    depends_on:
+      - backend
     restart: unless-stopped
 
 volumes:
